# rt-agent

./: .gitignore  LICENSE  README.md
.docker/: compose.build.yaml  compose.yaml
.github/workflows/: build-image.yaml  deploy-dev.yaml  main.yaml
agent/: main.py  pyproject.toml
go-recommend/: Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  main.go
go-recommend/config/: config.go
go-recommend/handler/: search_handler.go
go-recommend/helpers/: converters.go
go-recommend/invoicer/: recommend.pb.go  recommend_grpc.pb.go
go-recommend/model/: search_result.go
go-recommend/proto/: recommend.proto
go-recommend/qdrant/: client.go
go-recommend/server/: grpc_product.go
go-recommend/service/: search_service.go
identity-ocr/: Cargo.toml  Dockerfile  build.rs
identity-ocr/proto/: identity.proto
identity-ocr/src/: config.rs  main.rs
identity-ocr/src/service/: identity.rs
mage-ai/: Dockerfile  Taskfile.yaml  metadata.yaml  requirements.txt
mage-ai/data_exporters/: add_data_to_qdrant.py  train_fasttext.py
mage-ai/data_loaders/: load_categories_data.py  load_order_data.py  load_product_categories_data.py  load_product_data.py  load_product_data_from_postgres.py
mage-ai/load_helpers/: postgres_helper.py  qdrant_helper.py
product-image-search/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  run.py
provinces/: Dockerfile  README.rst  pyproject.toml
text-moderation/: .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
(+63 files in other folders)
