[package]
name = "id-card-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-openai = "0.29.1"
config = { version = "0.15.14", default-features = false }
prost = "0.14.1"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.1"
tonic-prost = "0.14.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "chrono", "env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14.1"
